# stack

./: .gitignore  Cargo.toml  README.md  README.org
.github/workflows/: ci.yml
brain/: Cargo.toml
brain/src/: camera.rs  lib.rs  localization.rs  segmentation.rs  tests.rs  utils.rs
control/: Cargo.toml  build.rs
control/src/: main.rs  mpu.rs
