[package]
authors = ["MODAP"]
name = "brain"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.3"
nalgebra = "0.29.0"
pylon-cxx = { version = "0.3.3", features = ["stream"] }
tokio-stream = "0.1.9"
v4l = "0.12.1"
tokio = { version = "1.12.0", features = ["full"] }
wgpu = { version = "0.13.1", features = ["angle"] }
image = "0.24.2"
pollster = "0.2.5"
bytemuck = "1.10.0"
anyhow = "1.0.58"

