[package]
authors = ["MODAP"]
name = "brain"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.3"
nalgebra = "0.29.0"
pylon-cxx = { version = "0.3.3", features = ["stream"] }
log = "0.4.17"
tokio-stream = "0.1.9"
simplelog = { version = "^0.11.0", features = ["paris"] }
anyhow = "1.0.58"
v4l = "0.12.1"
tokio = { version = "1.12.0", features = ["full"] }
wgpu = { version = "0.13.1", features = ["angle"] }
image = "0.24.2"
pollster = "0.2.5"
bytemuck = "1.10.0"
futures = "0.3.21"
