[package]
authors = ["MODAP"]
edition = "2021"
name = "control"
version = "0.1.0"
build = "build.rs"

[dependencies]
brain = { path = "../brain" }
mpu6050 = "0.1.4"
i2cdev = "0.5.1"
log = "0.4.17"
linux-embedded-hal = "0.3.2"
anyhow = "1.0.58"
csv = "1.1.6"

[build-dependencies]
vergen = "5"
anyhow = "1.0.50"
